@@ -43,11 +43,9 @@
 #include <nuttx/config.h>
 
 #include <sys/types.h>
+#include <stdlib.h>
 
-#ifndef CONFIG_NUTTX_KERNEL
-#  include <stdlib.h>
-#  include <nuttx/mm.h>
-#endif
+#include <nuttx/mm.h>
 
 /****************************************************************************
  * Public Types
@@ -77,10 +75,10 @@ extern "C"
 
 #ifndef CONFIG_NUTTX_KERNEL
 
-# define kmm_initialize(h,s)    mm_initialize(&g_mmheap,h,s)
-# define kmm_addregion(h,s)     mm_addregion(&g_mmheap,h,s)
-# define kmm_trysemaphore()     mm_trysemaphore(&g_mmheap)
-# define kmm_givesemaphore()    mm_givesemaphore(&g_mmheap)
+# define kmm_initialize(h,s)    umm_initialize(h,s)
+# define kmm_addregion(h,s)     umm_addregion(h,s)
+# define kmm_trysemaphore()     umm_trysemaphore()
+# define kmm_givesemaphore()    umm_givesemaphore()
 
 # define kmalloc(s)             malloc(s)
 # define kzalloc(s)             zalloc(s)
