@@ -11,9 +11,31 @@ config MM_MULTIHEAP
 		confused with memory regions.  One heap may be composed of multiple,
 		non-contiguous memory regions.  The fact that the heap is composed
 		of such multiple regions is invisible to the end-user (other than
-		the heap comes pre-fragemented).  Multiple heaps, on the other hand,
+		the heap comes pre-fragmented).  Multiple heaps, on the other hand,
 		supports a separate set of allocators that operate on a separate set
 		of memory regions.
+
+config MM_KERNEL_HEAP
+	bool "Support a protected, kernel heap"
+	default y
+	depends on NUTTX_KERNEL && MM_MULTIHEAP
+	---help---
+		Partition heap memory into two parts:  (1) a protected, kernel-mode
+		heap accessible only by the NuttX kernel, and (2) an unprotected
+		user-mode heap for use by applications.  If you are only interested
+		in protected the kernel from read access, then this option is not
+		necessary.  If you wish to secure the kernel data as well, then
+		this option should be selected.
+
+config MM_KERNEL_HEAPSIZE
+	int "Kernal heap size"
+	default 8192
+	depends on MM_KERNEL_HEAP
+	---help---
+		This is the size of the a protected, kernel-mode heap (in bytes).
+		The remaining of available memory is given to the unprotected
+		user-mode heap.  This value may need to be aligned to units of the
+		size of the smallest memory protection region.
 
 config MM_SMALL
 	bool "Small memory model"
